added Games features
