# project/main.js
@@ -51,7 +51,9 @@ const auth = require("./routes/auth");
 const users = require("./routes/users");
 const league = require("./routes/league");
 const teams = require("./routes/teams");
-const player=require("./routes/player");
+const player =require("./routes/player");
+const games = require("./routes/games");
+
 //#endregion
 
 //#region cookie middleware
@@ -79,6 +81,7 @@ app.use("/users", users);
 app.use("/league", league);
 app.use("/teams", teams);
 app.use("/player", player);
+app.use("/game", games);
 app.use(auth);
 
 app.use(function (err, req, res, next) {
